  - active 상태표시를 위한 API 변경
    + POST   /active?key=:key
    + DELETE /active/:order_id?key=:key
    - POST   /room
    - DELETE /room/:order_id
    - POST   /select
    - DELETE /select/:order_id

v0.6.0    Wed, 24 Feb 2016 18:31:47 +0900
  - 좀 더 편리한 우클릭 메뉴의 제안
  - 정리가 필요한 탈의실에 아이콘을 보여줌

v0.5.8    Fri, 05 Feb 2016 12:08:46 +0900
  - Allow cors to get target date

v0.5.7    Fri, 05 Feb 2016 11:22:11 +0900
  - opencloset.css 적용
  - Rename OpenCloset::Plugin::Helpers OpenCloset::Monitor::Plugin::Helpers
  - Add route 'GET /target_date.json'

v0.5.6    Thu, 28 Jan 2016 15:28:44 +0900
  - 일요일/공휴일에 대한 반납 문구 삭제

v0.5.5    Thu, 28 Jan 2016 15:03:04 +0900
  - 수선의 대기목록을 의류준비에서도 활용

v0.5.4    Sun, 17 Jan 2016 13:59:22 +0900
  - 포장 -> 포장중으로 라벨 변경

v0.5.3    Wed, 13 Jan 2016 08:35:55 +0900
  - 대여, 반납일에 local timezone 적용
  - opencloset.css bower package 를 사용

v0.5.2    Thu, 17 Dec 2015 16:54:50 +0900
  - font++ @dashboard

v0.5.1    Thu, 17 Dec 2015 10:30:07 +0900
  - 대쉬보드의 반납일을 지정

v0.5.0    Wed, 16 Dec 2015 18:32:38 +0900
  - front-end 리소스를 AssetPack 에서 Grunt 관리
  - 수선의 스크립트 오류 수정
  - 최근대여의류의 베스트핏 표시
  - Add online sms macro text

v0.4.7    Wed, 16 Dec 2015 04:46:33 +0900
  - 대쉬보드 하단안내 글자 size++
  - 온라인 대쉬보드의 사용자이름에 시간표 링크 추가

v0.4.6    Mon, 14 Dec 2015 18:53:11 +0900
  - 수선화면에서 '포장완료' 상태를 '포장' 상태로 처리
  - 준비화면에서 주문서에 pants 가 없으면 사용자의 pants 를 보여줌
  - whiltelist 를 위해 좀 더 자세한 remote addr 을 얻어냄
  - 대쉬보드에 반납안내문구 추가
  - 궁서체를 사용하지 않음

v0.4.5    Fri, 11 Dec 2015 11:52:23 +0900
  - 의류준비에서 포장상태의 사용자를 보여줌
  - 버그수정: 온라인 대여자가 대쉬보드에 나타나는 현상
  - 수선에서 온라인 주문서를 보여주지 않음
  - 주문서의 바지길이뿐만 아니라 사용자의 바지길이도 수정
  - online dashboard 추가
  - online dashboard 에 자동완성 기능 추가

v0.4.4    Tue, 24 Nov 2015 18:33:28 +0900
  - 탈의실 번호를 현황판에서 보여줌
  - Add helper `recent_orders`
  - 의류준비에서 최근 대여목록을 5개까지 보여 줌

v0.4.3    Thu, 19 Nov 2015 12:48:28 +0900
  - 수선화면의 현황판을 남자/여자 아이콘으로 표시

v0.4.2    Tue, 17 Nov 2015 13:10:46 +0900
  - 수선화면 현황판의 스타일 조정

v0.4.1    Tue, 17 Nov 2015 12:57:58 +0900
  - 수선완료 상태 변경 버그 수정
